# mlas_gemm

./: .gitignore  CMakeLists.txt  main.cpp
example/: CMakeLists.txt  compare.py  main.cpp  ov_matmul.cpp
lib/: mlasi.h
mlas/: CMakeLists.txt
mlas/lib/: threading.cpp
