cmake_minimum_required(VERSION 3.8)
project(ov_test)

add_executable(mlas_test main.cpp)
get_filename_component(PARENT_DIR ${CMAKE_SOURCE_DIR} DIRECTORY)
if(NOT WIN32)
    target_link_libraries(mlas_test PRIVATE ${CMAKE_SOURCE_DIR}/../build/libonnxruntime_mlas.a)
else()
	target_link_libraries(mlas_test PRIVATE ${PARENT_DIR}/build/Release/onnxruntime_mlas.lib)
endif()
target_include_directories(mlas_test PRIVATE ${PARENT_DIR}/inc)
