cmake_minimum_required(VERSION 3.8)
project(ov_test)

find_package(OpenVINO)
find_package(OpenMP)
#add_compile_options(-fopenmp)
#add_link_options(-fopenmp)
# if(OpenMP_CXX_FOUND)
# message("OpenMP Found")
# endif()
add_executable(mlas_test main.cpp)
target_link_libraries(mlas_test PUBLIC ${CMAKE_SOURCE_DIR}/../build/libonnxruntime_mlas.a)
target_link_libraries(mlas_test PUBLIC openvino::runtime)
# target_link_libraries(mlas_test PUBLIC OpenMP::OpenMP_CXX)
# target_compile_options(mlas_test PRIVATE -fopenmp)
# add_compile_options(-fopenmp)
target_include_directories(mlas_test PUBLIC ../inc)
add_executable(ov_fc ov_matmul.cpp)
target_link_libraries(ov_fc PUBLIC openvino::runtime)